--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="image_desc">画像がありません</string>
     <string name="stream_fragment_title">Live Stream</string>
+    <string name="profile_title">Profile</string>
     <string name="favorite_fragment_title">Favorite Clips</string>
+    <string name="clip_fragment_title">Popular Clips</string>
     <string name="nothing_favo">いいねがありません</string>
     <string name="menu_stream_title">Live</string>
-    <string name="menu_favorite_title">Like</string>
+    <string name="menu_profile_title">Profile</string>
     <string name="menu_clip_title">Clip</string>
 </resources>
