プロフィール変更のためのカスタムダイアログの作成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">TwitchApp</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="image_desc">画像がありません</string>
     <string name="stream_fragment_title">Live Stream</string>
@@ -8,7 +8,14 @@
     <string name="favorite_fragment_title">Favorite Clips</string>
     <string name="clip_fragment_title">Popular Clips</string>
     <string name="nothing_favo">いいねがありません</string>
+
+    <!--メニューバー-->
     <string name="menu_stream_title">Live</string>
     <string name="menu_profile_title">Profile</string>
     <string name="menu_clip_title">Clip</string>
+
+    <!--ダイアログ用-->
+    <string name="dialog_title">Edit Profile</string>
+    <string name="dialog_btn_ok">OK</string>
+    <string name="dialog_btn_cancel">Cancel</string>
 </resources>
