format, layout fix

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="favorite_fragment_title">Favorite Clips</string>
     <string name="clip_fragment_title">Popular Clips</string>
     <string name="nothing_favo">いいねがありません</string>
+    <string name="no_name">No Name</string>
 
     <!--メニューバー-->
     <string name="menu_stream_title">Live</string>
@@ -15,11 +16,13 @@
     <string name="menu_clip_title">Clip</string>
 
     <!--ダイアログ用-->
+    <string name="text_button">Edit</string>
     <string name="dialog_title">Edit Profile</string>
     <string name="dialog_btn_ok">OK</string>
     <string name="dialog_btn_cancel">Cancel</string>
 
     <!--いいねの数-->
     <string name="number_likes">Likes %d</string>
+    <string name="number_likes_default">Likes 0</string>
 
 </resources>
