impl paging load state

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,19 +10,17 @@
     <string name="nothing_favo">いいねがありません</string>
     <string name="no_name">No Name</string>
     <string name="paging_error_text">読み込めませんでした</string>
+    <string name="paging_retry_btn_text">Retry</string>
 
-    <!--メニューバー-->
     <string name="menu_stream_title">Live</string>
     <string name="menu_profile_title">Profile</string>
     <string name="menu_clip_title">Clip</string>
 
-    <!--ダイアログ用-->
     <string name="text_button">Edit</string>
     <string name="dialog_title">Edit Profile</string>
     <string name="dialog_btn_ok">OK</string>
     <string name="dialog_btn_cancel">Cancel</string>
 
-    <!--いいねの数-->
     <string name="number_likes">Likes %d</string>
     <string name="number_likes_default">Likes 0</string>
 
