--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <string name="dialog_input_label">Name</string>
     <string name="dialog_error_empty_label">名前を入力してください</string>
     <string name="dialog_error_over_label">%d 文字以内で入力してください</string>
+    <string name="dialog_filter">Select Game</string>
 
     <!--いいねの数-->
     <string name="nothing_favo">いいねがありません</string>
